objects/ssot__LoyaltyTier__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Tier Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTierGroupId__c</fullName>
        <label>Loyalty Tier Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumEligibleBalanceNumber__c</fullName>
        <label>Maximum Eligible Balance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumEligibleBalanceNumber__c</fullName>
        <label>Minimum Eligible Balance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184897_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTierGroup_Id_map_LoyaltyTier__rel</label>
        <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
        <relationshipLabel>LoyaltyTierGroup_Id_map_LoyaltyTier__rel</relationshipLabel>
        <relationshipName>rel_1697761184897_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761185176_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTier_LoyaltyTierGroupId_map_L_rel</label>
        <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
        <relationshipLabel>LoyaltyTier_LoyaltyTierGroupId_map_L_rel</relationshipLabel>
        <relationshipName>rel_1697761185176_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832106749_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTier_LoyaltyTierGroupId_map_L_rel</label>
        <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
        <relationshipLabel>LoyaltyTier_LoyaltyTierGroupId_map_L_rel</relationshipLabel>
        <relationshipName>rel_1729832106749_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>